# xtensor_demo

./: BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  build.sh  example.py  run.sh
examples/: basic.cpp  basic_test.py  dataset_parser.cc  person.proto  test.cpp  xtensor_example.cpp
